[package]
name = "tnfilt"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
readme = "Readme.org"
description = "Turn typenum compilation error messages into something fit for a human"
repository = "https://github.com/auxoncorp/tnfilt"
license-file = "LICENSE"

[dependencies]
nom = "4.2.3"