[package]
name = "tnfilt"
version = "0.1.1"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
readme = "README.md"
description = "Turn typenum compilation error messages into something fit for a human"
repository = "https://github.com/auxoncorp/tnfilt"
license-file = "LICENSE"

[dependencies]
nom = "4.2.3"